- change file matching mechanism to Regexp - fixed UI bug for Email field - fixed unit tests - version changed to 1.6-SNAPSHOT

--- a/src/main/resources/com/generalmobile/googledriveupload/GoogleDriveUploader/help-uploadFolder.html
+++ b/src/main/resources/com/generalmobile/googledriveupload/GoogleDriveUploader/help-uploadFolder.html
@@ -1,7 +1,7 @@
 <div>
     <p>
         Fill the path to the directories or files inside workspace to upload to Google Drive. 
-        Leave empty for the upload all workspace.
-        You can specify multiple comma-separated paths and use Glob regular expressions as implemented by the org.apache.oro.text package,
+        Leave empty for the upload all workspace.<br/>
+        You can specify multiple comma-separated paths (relative to working directory) and use regular expressions (see <a href="https://docs.oracle.com/javase/7/docs/api/java/util/regex/Pattern.html" target="_blank">java.util.regex.Pattern</a>)
     </p>
 </div>
