--- a/src/main/resources/com/generalmobile/googledriveupload/GoogleDriveUploader/help-driveFolderName.html
+++ b/src/main/resources/com/generalmobile/googledriveupload/GoogleDriveUploader/help-driveFolderName.html
@@ -1,8 +1,8 @@
 <div>
     <p>
         The name of the project parent folder in the drive. Leave empty for the default name. Default name is workspace
-        name.
+        name.<br/>
         In order to upload to a folder that is not at the top level of drive you can use a path like expression to specify folder.
-        For example : my_drive_folder/subfolder . 
+        For example : <samp>my_drive_folder/subfolder</samp>
     </p>
 </div>
